@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+CRE: display region information when one is selected.
+Nicolas Weeger 2010-04-15
+
 CRE: experience display.
 Nicolas Weeger 2010-04-15
 
